[package]
name = "bevy_map_viewer"
authors = ["Sameul Oldham <so9010sami@gmail.com>"]
description = "Work with xyz tiles, such as the ones found on OpenStreetMap and google maps, in bevy!"
readme = "README.md"
repository = "https://github.com/SO9010/bevy-map-viewer"
license = "Apache-2.0"
keywords = ["bevy", "map", "openstreetmap", "osm", "slippy"]
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.0", default-features = false }
crossbeam-channel = "0.5.15"
bevy_pancam = { version = "0.18.0", optional = true }
mvt-reader = { version = "2.0.1", optional = true }
geo = { version = "0.30.0", optional = true }
raqote = { version = "0.8.5", optional = true }
ureq = { version = "3.0.11", optional = true }
image = { version = "0.25.6", optional = true }
bevy_egui = { version = "0.34.1", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }


[features]
default = ["standard","pancam","ui_blocking"]
standard = [
    "tiles"
]
tiles = ["dep:image", "dep:ureq", "dep:mvt-reader", "dep:geo", "dep:raqote", "dep:serde"]
ui_blocking = ["dep:bevy_egui"]
pancam = ["dep:bevy_pancam"]

[dev-dependencies]
bevy = "0.16.0"

[[example]]
name = "simple_viewer"
path = "examples/simple_viewer.rs"

[package.metadata.docs.rs]
features = ["standard"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
